--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
   </animateTransform>
 </g>
 </svg>
-<h2>Sorry for the inconvenience.<br>To contact us in the meantime please email</h2>
-<a href="mailto:email">collab@codewithfaraz.com</a><h2>or call <span>0111 111111</span></h2>
+<h2>Sorry for the inconvenience.<br>To contact us in the meantime please Facebook</h2>
+<a href="mailto:email"></a><h2>or call <span>+977 9742454878</span></h2>
 </div>
   </body>
 </html>
