--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 <h2>Sorry for the inconvenience.<br>To contact us in the meantime please Facebook</h2>
 <a href="mailto:email"></a><h2>or call <span>+977 9742454878</span></h2>
     <button onclick="sendMessage()" style="padding: 10px 20px; background-color: #3b5998; color: white; border: none; border-radius: 5px; cursor: pointer;">
-  <img src="https://upload.wikimedia.org/wikipedia/commons/5/51/Facebook_Messenger_4_Logo_color.svg" alt="Messenger Logo" style="width: 20px; height: 20px; margin-right: 5px;">Send Message
+  <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/be/Facebook_Messenger_logo_2020.svg/1024px-Facebook_Messenger_logo_2020.svg.png" alt="Messenger Logo" style="width: 20px; height: 20px; margin-right: 5px;">Send Message
 </button>
 
 <script>
