--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
 <script>
 function sendMessage() {
-  alert("Sending message...");
+  alert("Wanna Redirect to Facebook...");
   window.location.href = "https://www.facebook.com/profile.php?id=100089099606013";
 }
 </script>
