--- a/index.html
+++ b/index.html
@@ -1,9 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Web App Nepal</title>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>WebAppNepal - Leading Tech Company in Nepal</title>
+    <meta name="description" content="WebAppNepal is a leading tech company in Nepal providing services in website development, graphic design, and more.">
+    <meta name="keywords" content="WebAppNepal, tech company, Nepal, website development, graphic design">
+    <meta name="author" content="WebAppNepal">
+    <meta name="robots" content="index, follow">
+    <link rel="canonical" href="https://webappnepal.tech">
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
